# tmr_ros2

custom_package/: CMakeLists.txt
custom_package/src/: send_command.cpp
demo/src/: demo_ask_item.cpp  demo_ask_sta.cpp  demo_connect_tm.cpp  demo_leave_listen_node.cpp  demo_send_script.cpp  demo_set_event.cpp  demo_set_io.cpp  demo_set_positions.cpp  demo_write_item.cpp
tm12_moveit_config/: .setup_assistant  CMakeLists.txt  Servo_Readme.md  package.xml
tm12_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  tm12.srdf  tm12.urdf.xacro  tm_servo.yaml
tm12_moveit_config/launch/: servo_launch.py
tm12_moveit_config/src/: servo_keyboard_input.cpp  tm_joint_control.cpp
tm12_moveit_config_humble/: .setup_assistant  CMakeLists.txt  package.xml
tm12_moveit_config_humble/config/: kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  tm12.srdf  tm_servo.yaml
tm12_moveit_config_humble/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
tm12_moveit_config_humble/src/: servo_keyboard_input.cpp
tm_description/xacro/: macro.gazebo.xacro
tm_driver/include/tm_driver/: tm_ros2_sct.h
tm_driver/src/: tm_ros2_movit_sct.cpp  tm_ros2_sct.cpp  tm_ros2_svr.cpp
tm_gazebo/: CMakeLists.txt  package.xml
tm_gazebo/worlds/: tm12x.world
tm_gazebo/xacro/: tm.gazebo.xacro
tm_gazebo_cf/: CMakeLists.txt  README.md  package.xml
tm_gazebo_cf/config/: initial_positions.yaml  ros2_controllers.yaml
tm_gazebo_cf/launch/: 1workingspawnrobotingz.py  controller_manager.launch.py
tm_gazebo_cf/xacro/: moveit-tm12.urdf.xacro  tm12.ros2_control.xacro
tm_moveit_config_tm5-900/config/: kinematics.yaml
ui_for_debug_and_demo/: package.xml
