<?xml version="1.0"?>
<package format="3">
  <name>tm_gazebo_cf</name>
  <version>1.0.0</version>
  <description>
      Gazebo wrapper for the Techman Robot arms.
  </description>

  <author email="yh.wang@tm-robot.com">yh.wang</author>
  <maintainer email="yh.wang@tm-robot.com">yh.wang</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  
  <!-- Added -->
  <exec_depend>tm_gazebo</exec_depend>
  <exec_depend>tm12_moveit_config</exec_depend>
  <exec_depend>xacro</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
